#190 made changes that will fix this issue on safari

--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -1,7 +1,3 @@
-body {
-    height: 0 !important; /*override semantic-ui default styles*/
-}
-
 a {
     text-decoration: none;
 }
